fix(calendar): remove gap when weeks is hidden

--- a/src/framework/theme/components/calendar-kit/_calendar-kit.theme.scss
+++ b/src/framework/theme/components/calendar-kit/_calendar-kit.theme.scss
@@ -174,6 +174,12 @@
     margin: 1px;
   }
 
+  nb-calendar-week-numbers .week-cell,
+  nb-calendar-week-numbers .sign {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
   nb-calendar-day-picker .day-cell,
   nb-calendar-month-picker .month-cell,
   nb-calendar-year-picker .year-cell {
