--- a/src/framework/theme/components/calendar/_calendar.component.theme.scss
+++ b/src/framework/theme/components/calendar/_calendar.component.theme.scss
@@ -7,6 +7,10 @@
 @mixin nb-calendar-theme() {
 
   nb-base-calendar {
+    nb-card {
+      overflow: hidden;
+    }
+
     &.medium nb-card {
       width: nb-theme(calendar-width);
 
@@ -23,6 +27,14 @@
       }
     }
 
+    &.has-week-number.medium nb-card {
+      width: calc(#{nb-theme(calendar-width)} + #{nb-theme(calendar-day-cell-width)} + 1px);
+    }
+
+    &.has-week-number.large nb-card {
+      width: calc(#{nb-theme(calendar-large-width)} + #{nb-theme(calendar-day-cell-width)} + 1px);
+    }
+
     nb-card {
       border: none;
       margin: 0;
@@ -32,7 +44,7 @@
       padding: 0;
 
       & > nb-calendar-pageable-navigation, & > nb-calendar-navigation {
-        padding: 1rem;
+        padding: 1rem 0;
       }
     }
   }
