--- a/src/framework/theme/styles/themes/_mapping.scss
+++ b/src/framework/theme/styles/themes/_mapping.scss
@@ -1207,7 +1207,7 @@ $eva-mapping: (
   list-item-font-weight: text-paragraph-font-weight,
   list-item-line-height: text-paragraph-line-height,
 
-  calendar-width: 22.0625rem,
+  calendar-width: 19.25rem,
   calendar-body-height: 25.625rem,
   calendar-border-radius: border-radius,
   calendar-text-color: text-basic-color,
@@ -1279,7 +1279,7 @@ $eva-mapping: (
   calendar-weeknumber-height: calendar-weekday-height,
   calendar-weeknumber-width: calendar-weekday-width,
 
-  calendar-large-width: 24.6875rem,
+  calendar-large-width: 21.875rem,
   calendar-large-body-height: 27.75rem,
   calendar-day-cell-large-width: 3rem,
   calendar-day-cell-large-height: 3rem,
